Updated to use VaultAPI. Finished removing old files.

--- a/src/main/resources/discord.yml
+++ b/src/main/resources/discord.yml
@@ -1,2 +1,9 @@
-command prefix: '?'
-guild id: 563608602234060802
+bot:
+  token: ''
+  status: 'playing on {ip}'
+
+guild:
+  id: 148130906555547648
+
+command:
+  prefix: '?'
