--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,7 +7,7 @@ name: ${project.name}
 version: ${project.version}
 load: STARTUP
 author: xt449
-api-version: '1.14'
+#api-version: '1.14'
 depend: [Vault]
 
 permissions:
