--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 
     <groupId>xt449</groupId>
     <artifactId>minecraftdiscordbot</artifactId>
-    <version>${minecraft.version}-2.0.1-BETA</version>
+    <version>${minecraft.version}-2.0.1</version>
     <name>MinecraftDiscordBot</name>
 
     <properties>
-        <minecraft.version>1.14.2</minecraft.version>
+        <minecraft.version>1.14.3</minecraft.version>
     </properties>
 
     <repositories>
@@ -39,13 +39,6 @@
         </dependency>
 
         <dependency>
-            <groupId>xt449</groupId>
-            <artifactId>bukkitutilitylibrary</artifactId>
-            <version>${minecraft.version}-4.0.0</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>VaultAPI</artifactId>
             <version>1.7</version>
@@ -53,9 +46,16 @@
         </dependency>
 
         <dependency>
+            <groupId>xt449</groupId>
+            <artifactId>bukkitutilitylibrary</artifactId>
+            <version>${minecraft.version}-4.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>3.8.3_462</version>
+            <version>LATEST</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
