Upgraded to 1.14.4. Updated package names.

--- a/src/main/resources/discord.yml
+++ b/src/main/resources/discord.yml
@@ -1,9 +1,9 @@
 bot:
-  token: ''
+  token: '<your bot token here>'
   status: 'playing on {ip}'
 
 guild:
-  id: 148130906555547648
+  id: <your server id here>
 
 command:
   prefix: '?'
