--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,22 @@
 
     <groupId>xt449</groupId>
     <artifactId>minecraftdiscordbot</artifactId>
-    <version>${minecraft.version}-2.0.1</version>
+    <version>${minecraft.version}-2.1.0</version>
     <name>MinecraftDiscordBot</name>
 
     <properties>
-        <minecraft.version>1.14.3</minecraft.version>
+        <minecraft.version>1.14.4</minecraft.version>
     </properties>
 
     <repositories>
         <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+
+        <repository>
+            <id>papermc-repo</id>
+            <url>https://papermc.io/repo/repository/maven-public/</url>
         </repository>
 
         <repository>
@@ -39,6 +44,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot</artifactId>
+            <version>${minecraft.version}-R0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>VaultAPI</artifactId>
             <version>1.7</version>
@@ -46,17 +57,23 @@
         </dependency>
 
         <dependency>
-            <groupId>xt449</groupId>
+            <groupId>com.github.xt449</groupId>
             <artifactId>bukkitutilitylibrary</artifactId>
-            <version>${minecraft.version}-4.1.0</version>
+            <version>${minecraft.version}-4.1.5</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>LATEST</version>
+            <version>4.1.0_100</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>club.minnced</groupId>
+                    <artifactId>opus-java</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
