--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>xt449</groupId>
+    <groupId>com.github.xt449</groupId>
     <artifactId>minecraftdiscordbot</artifactId>
-    <version>${minecraft.version}-2.1.0</version>
+    <version>${minecraft.version}-0.1.1</version>
     <name>MinecraftDiscordBot</name>
 
     <properties>
-        <minecraft.version>1.14.4</minecraft.version>
+        <minecraft.version>1.16.3</minecraft.version>
     </properties>
 
     <repositories>
@@ -20,18 +20,8 @@
         </repository>
 
         <repository>
-            <id>papermc-repo</id>
-            <url>https://papermc.io/repo/repository/maven-public/</url>
-        </repository>
-
-        <repository>
-            <id>vault-repo</id>
-            <url>http://nexus.hc.to/content/repositories/pub_releases</url>
-        </repository>
-
-        <repository>
-            <id>jcenter-bintray-repo</id>
-            <url>http://jcenter.bintray.com</url>
+            <id>jcenter-repo</id>
+            <url>https://jcenter.bintray.com/</url>
         </repository>
     </repositories>
 
@@ -44,29 +34,16 @@
         </dependency>
 
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>${minecraft.version}-R0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>net.milkbowl.vault</groupId>
-            <artifactId>VaultAPI</artifactId>
-            <version>1.7</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
             <groupId>com.github.xt449</groupId>
-            <artifactId>bukkitutilitylibrary</artifactId>
-            <version>${minecraft.version}-4.1.5</version>
+            <artifactId>spigotutilitylibrary</artifactId>
+            <version>${minecraft.version}-4.3.1</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>4.1.0_100</version>
+            <version>4.2.0_208</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -80,7 +57,7 @@
     <build>
         <resources>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>src/main/resources/</directory>
                 <filtering>true</filtering>
             </resource>
         </resources>
@@ -89,33 +66,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.1</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <version>3.2.4</version>
                 <configuration>
-                    <shadedArtifactAttached>true</shadedArtifactAttached>
-                    <artifactSet>
-                        <includes>
-                            <include>xt449:bukkitutilitylibrary</include>
-                            <include>net.dv8tion:JDA</include>
-                        </includes>
-                    </artifactSet>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <minimizeJar>true</minimizeJar>
                 </configuration>
             </plugin>
         </plugins>
