--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 main: ${project.groupId}.${project.artifactId}.${project.name}
-name: ${project.artifactId}
+name: ${project.name}
 version: ${project.version}
 load: STARTUP
 author: xt449
