Added invite link to account linking notification

--- a/src/main/resources/discord.yml
+++ b/src/main/resources/discord.yml
@@ -1,3 +1,4 @@
 token: 'NTY5MTcwODEwODYyOTYwNjQw.XMI8IA.gElso5XPEYE47FZ_EvZPa-q-0Pg'
+invite link: 'http://discord.gg/abc123'
 command prefix: '/'
 guild id: 148130906555547648
